--- a/app/views/pages/_game_example.html.erb
+++ b/app/views/pages/_game_example.html.erb
@@ -25,4 +25,4 @@ cards.map{|card| card.done_at = Time.now}
 
 %>
 <%# <input id="game-example__step" type="range" min="1" max="4" value="1" step="1" id="myRange" /> %>
-<%= render 'games/dashboard2', dashboard: @exemple3, readonly: true, open_kills: true %>
+<%= render 'games/dashboard2', dashboard: @exemple3, readonly: true %>
