--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -35,7 +35,7 @@
   </div>
   <%# game state %>
   <div>
-    <h2><%= t 'cards.index.title' %> <span class="badge"><%= @game.cards.count%></span></h2>
+    <h2><%= Card.model_name.human count: 2 %> <span class="badge"><%= @game.cards.count%></span></h2>
     <% if @game.players.size > 0 %>
       <%= render 'games/dashboard2', dashboard: @game.get_dashboard2, readonly: @game.started?, admin_mode: true %>
     <% else %>
