--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,9 @@
     <% end %>
   </ol>
 </section>
-<hr/>
-<section>
-  <h2><%= t('.h2_pricing') %></h2>
-</section>
+<% if false %>
+  <hr/>
+  <section>
+    <h2><%= t('.h2_pricing') %></h2>
+  </section>
+<% end %>
