--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -30,6 +30,7 @@
     <details>
       <summary>▶️ <%= t 'games.show.actions_buttons' %></summary>
       <%= render "games/start_button", game: @game %>
+      <%= link_to "🖨️ #{t 'cards.index.title'}", game_cards_path(game_id: @game.id, format: 'pdf'), role: :button, style: "display: block", class: "secondary" %>
       <%= button_to "🗑 #{t 'games.destroy.title'}", @game, method: :delete, role: :button, class: "form-as-link" %>
     </details>
   </div>
