--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,18 +4,24 @@
       <p><%= t 'layout._footer.sitemap' %></p>
       <ul>
         <li><%= link_to t('pages.help.title'), help_path %></li>
-        <li><%= link_to t('pages.actions.title'), actions_path %></li>
-        <li><%= link_to t('pages.api_doc.title'), api_doc_path %></li>
-        <li><%= switch_lang_link %></li>
-      </ul>
+        <li><%= link_to t('pages.actions.title'), actions_path %>
+          <ul>
+            <% t('game.tags').each_key do |key| %>
+              <li><%= link_to t('pages.actions.title_for', tag: t("game.tags.#{key}") ), actions_path(tag: key) %>
+              <% end %>
+            </ul>
+          </li>
+          <li><%= link_to t('pages.api_doc.title'), api_doc_path %></li>
+          <li><%= switch_lang_link %></li>
+        </ul>
+      </div>
+      <div>
+        <p><%= t('layout._footer.external.title') %></p>
+        <ul>
+          <li><%= link_to t('layout._footer.external.github'), 'https://github.com/madeindjs/killer-game', target: '_blank' %></li>
+          <li><%= link_to t('layout._footer.external.me'), 'https://rsseau.fr', target: '_blank'  %></li>
+        </ul>
+      </div>
     </div>
-    <div>
-      <p><%= t('layout._footer.external.title') %></p>
-      <ul>
-        <li><%= link_to t('layout._footer.external.github'), 'https://github.com/madeindjs/killer-game' %></li>
-        <li><%= link_to t('layout._footer.external.me'), 'https://rsseau.fr' %></li>
-      </ul>
-    </div>
-  </div>
-  <p><small>🍪🚮 <%= t('layout._footer.cookieless') %></small></p>
-</footer>
+    <p><small>🍪🚮 <%= t('layout._footer.cookieless') %></small></p>
+  </footer>
