--- a/app/views/pages/actions.html.erb
+++ b/app/views/pages/actions.html.erb
@@ -1,7 +1,7 @@
 <h1><%= t('.title') %></h1>
 <p><%= t('pages.actions.found_actions_is_not_easy') %></p>
 <ul>
-  <% t('game.default_fields.actions').each do |action| %>
+  <% @actions.each do |action| %>
     <li><%= action %></li>
   <% end %>
 </ul>
