--- a/app/views/pages/actions.html.erb
+++ b/app/views/pages/actions.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t('.title') %></h1>
+<h1><%= @title %></h1>
 <p><%= t('pages.actions.found_actions_is_not_easy') %></p>
 <ul>
   <% @actions.each do |action| %>
