--- a/the-killer-online/src/pages/new.astro
+++ b/the-killer-online/src/pages/new.astro
@@ -11,9 +11,9 @@ const title = "Create a game";
     dolorem aperiam, adipisci recusandae beatae? Asperiores dolorem magni soluta sunt est voluptate sed!
   </aside>
   <form action="api/games" method="post">
-    <label for="gameName">Game</label>
-    <input type="text" name="name" required />
-    <input type="submit" />
+    <span>Game</span>
+    <input class="input input-bordered input-primary w-full max-w-xs" type="text" name="name" required />
+    <input type="submit" class="btn btn-primary" />
   </form>
   <a href="/join">Join a game</a>
 </Layout>
