--- a/the-killer-online/src/components/NavBar.astro
+++ b/the-killer-online/src/components/NavBar.astro
@@ -1,5 +1,7 @@
 ---
+import { getCreatedGameFromCookies, getGameAdminUrl } from "../services";
 
+const games = await getCreatedGameFromCookies(Astro.cookies);
 ---
 
 <div class="navbar bg-base-100">
@@ -11,12 +13,16 @@
         >
       </label>
       <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><a>Item 1</a></li>
         <li>
-          <a>Parent</a>
-          <ul class="p-2">
-            <li><a>Submenu 1</a></li>
-            <li><a>Submenu 2</a></li>
+          <a href="/games">Games created</a>
+          <ul>
+            {
+              games.map((game) => (
+                <li>
+                  <a href={getGameAdminUrl(game)}>{game.name}</a>
+                </li>
+              ))
+            }
           </ul>
         </li>
         <li><a>Item 3</a></li>
@@ -40,6 +46,9 @@
     </ul>
   </div>
   <div class="navbar-end">
-    <a class="btn btn-primary" href="/new">Create a game</a>
+    <div class="join">
+      <a class="btn join-item" href="/join">Join a game</a>
+      <a class="btn join-item btn-primary" href="/new">Create a game</a>
+    </div>
   </div>
 </div>
