--- a/the-killer-online/src/pages/admin/games/[private_token].astro
+++ b/the-killer-online/src/pages/admin/games/[private_token].astro
@@ -1,19 +1,34 @@
 ---
 import Layout from "../../../layouts/Layout.astro";
 
-import { addGameUuidToCookies, fetchGameByPrivateToken, getGamePublicUrl } from "../../../services/games";
+import GameStep from "../../../components/GameStep.astro";
+import { STYLES } from "../../../constants";
+import { addGamePrivateTokenToCookies, fetchGameByPrivateToken, getGamePublicUrl } from "../../../services/games";
 
-const game = await fetchGameByPrivateToken(Astro.params.private_token);
+const game = await fetchGameByPrivateToken(String(Astro.params.private_token));
 
-addGameUuidToCookies(game, Astro.cookies);
+if (!game) {
+  return new Response("Game not found", {
+    status: 404,
+    statusText: "Not found",
+  });
+}
+
+addGamePrivateTokenToCookies(game, Astro.cookies);
 
 const publicUrl = getGamePublicUrl(game);
+
+const publicAbsoluteUrl = new URL(Astro.request.url);
+publicAbsoluteUrl.pathname = publicUrl;
 
 const title = `Game: ${game.name}`;
 ---
 
 <Layout title={title}>
-  <h1>{title}</h1>
-  <a href={publicUrl}>{publicUrl}</a>
-  <a href="/">Go back</a>
+  <h1 class={STYLES.h1}>{title}</h1>
+  <div class="mb-3">
+    <GameStep game={game} />
+  </div>
+  <a class="link" target="_blank" href={publicUrl}>{publicAbsoluteUrl}</a>
+  <a class="link" href="/">Go back</a>
 </Layout>
