--- a/the-killer-online/src/pages/players/[public_token].astro
+++ b/the-killer-online/src/pages/players/[public_token].astro
@@ -2,9 +2,16 @@
 import Layout from "../../layouts/Layout.astro";
 import { fetchGameBy, getGamePublicUrl } from "../../services/games";
 
-import { fetchPlayerByPublicToken } from "../../services/player";
+import { fetchPlayerByPublicToken } from "../../services/players";
 
-const player = await fetchPlayerByPublicToken(Astro.params.public_token);
+const player = await fetchPlayerByPublicToken(String(Astro.params.public_token));
+
+if (!player) {
+  return new Response("Game not found", {
+    status: 404,
+    statusText: "Not found",
+  });
+}
 
 const game = await fetchGameBy("id", player.game_id);
 
@@ -20,3 +27,4 @@ const title = `👋 Hello ${player.name}`;
 
   <a href="/">Go back</a>
 </Layout>
+ ../../services/players
