--- a/the-killer-online/src/pages/players/[public_token].astro
+++ b/the-killer-online/src/pages/players/[public_token].astro
@@ -1,4 +1,5 @@
 ---
+import { STYLES } from "../../constants";
 import Layout from "../../layouts/Layout.astro";
 import { fetchGameBy, getGamePublicUrl } from "../../services/games";
 
@@ -7,7 +8,7 @@ import { fetchPlayerByPublicToken } from "../../services/players";
 const player = await fetchPlayerByPublicToken(String(Astro.params.public_token));
 
 if (!player) {
-  return new Response("Game not found", {
+  return new Response("Player not found", {
     status: 404,
     statusText: "Not found",
   });
@@ -15,13 +16,27 @@ if (!player) {
 
 const game = await fetchGameBy("id", player.game_id);
 
+if (!game) {
+  return new Response("game not found", {
+    status: 404,
+    statusText: "Not found",
+  });
+}
+
 const gamePublicUrl = getGamePublicUrl(game);
 
 const title = `👋 Hello ${player.name}`;
 ---
 
 <Layout title={title}>
-  <h1>{title}</h1>
+  <h1 class={STYLES.h1}>{title}</h1>
+
+  <div class="text-sm breadcrumbs">
+    <ul>
+      <li><a href={getGamePublicUrl(game)}>Game {game.name}</a></li>
+      <li>{player.name}'s dashboard</li>
+    </ul>
+  </div>
 
   <p>You're part of the game: <a href={gamePublicUrl}>{game.name}</a></p>
 
