--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
     </ul>
   <% else %>
     <ul>
-      <li><%= link_to "Se connecter", new_user_session_path %></li>
+      <li><%= link_to "#{t 'login'}", new_user_session_path %></li>
     </ul>
   <% end %>
 </nav>
