--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+@plugin "daisyui";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,7 +21,11 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
+  background: linear-gradient(
+      to bottom,
       transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
+
